gccida/g2/make_node
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_node/src/tree.c:789:18: error: must use 'enum' tag to refer to type 'tree_code'
tree  make_node( tree_code code) 
                 ^
                 enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_node/src/tree.c:793:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_node/src/tree.c:808:19: error: expected expression
v3 = ( tree_node *)ggc_alloc( v2); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_node/src/tree.c:808:8: error: use of undeclared identifier 'tree_node'
v3 = ( tree_node *)ggc_alloc( v2); 
       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/make_node/src/obj/tree.o] Error 1
